--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [
+    "@babel/preset-env",
     "@babel/preset-typescript"
   ],
   "plugins": [
@@ -10,9 +11,15 @@
     ["@babel/proposal-class-properties", {
       "loose": true
     }],
-    "@babel/proposal-object-rest-spread",
     "@babel/plugin-transform-arrow-functions",
+    "@babel/plugin-transform-block-scoped-functions",
     "@babel/plugin-transform-block-scoping",
-    "@babel/plugin-transform-function-name"
+    "@babel/plugin-transform-computed-properties",
+    "@babel/plugin-transform-destructuring",
+    "@babel/plugin-transform-duplicate-keys",
+    "@babel/plugin-transform-function-name",
+    "@babel/plugin-transform-template-literals",
+    "@babel/plugin-transform-shorthand-properties",
+    "@babel/plugin-transform-spread"
   ]
 }
