--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:multi": "webpack --env.build=multi --config webpack/build.config.js",
     "tsc": "tsc ./src/index.ts --experimentalDecorators true --emitDecoratorMetadata true --target es5 --outDir ./dist --types ./es.d.ts",
     "local-tsc": "tsc",
-    "babel": "babel ./src --out-dir ./dist --extensions \".ts,.tsx\"",
+    "babel": "babel ./src --out-dir ./dist --extensions \".ts,.tsx\" --copy-files",
     "dev": "npm run local-tsc && npm run babel"
   },
   "main": "./src/index.ts",
@@ -23,6 +23,7 @@
     "vanilla-i18n": "^1.0.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
