--- a/package.json
+++ b/package.json
@@ -16,43 +16,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "^2.2.10",
     "bootstrap": "^4.3.1",
-    "plumejs": "^2.0.1",
-    "rxjs": "^6.5.2",
-    "vanilla-i18n": "^1.0.6"
+    "plumejs": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-block-scoping": "^7.7.4",
-    "@babel/plugin-transform-function-name": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.4",
-    "@types/node": "^12.7.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-typescript-metadata": "^0.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "core-js": "^3.1.4",
+    "@types/jest": "^24.0.15",
+    "coveralls": "^3.0.4",
     "css-loader": "^3.1.0",
+    "del": "^4.1.1",
+    "happy-dom": "^0.9.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "node-sass": "^4.12.0",
-    "reflect-metadata": "^0.1.13",
+    "node-sass-magic-importer": "^5.3.2",
+    "pre-build-webpack": "^0.1.0",
     "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "typescript": "^3.7.3",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "url-loader": "^3.0.0",
     "webpack": "^4.35.0",
-    "webpack-babel-env-deps": "^1.5.0",
-    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
-    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1"
   }
 }
