--- a/package.json
+++ b/package.json
@@ -1,45 +1,20 @@
 {
-  "name": "test-plumejs",
+  "name": "plume-ui",
   "version": "1.0.0",
-  "description": "",
+  "description": "A collection of UI components built using PlumeJs",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
-    "start": "npm run serve",
-    "serve": "webpack-dev-server --config webpack/server.config.js",
-    "build": "webpack  --config webpack/build.config.js",
-    "build:multi": "webpack --env.build=multi --config webpack/build.config.js",
-    "tsc": "tsc ./src/index.ts --experimentalDecorators true --emitDecoratorMetadata true --target es5 --outDir ./dist --types ./es.d.ts",
-    "local-tsc": "tsc",
-    "babel": "babel ./src --out-dir ./dist --extensions \".ts,.tsx\" --copy-files",
-    "dev": "npm run local-tsc && npm run babel"
+    "tsc": "tsc && copyfiles src/**/*.scss dist/"
   },
-  "main": "./src/index.ts",
+  "main": "./index.ts",
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "plumejs": "^2.1.4"
-  },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "coveralls": "^3.0.4",
-    "css-loader": "^3.1.0",
-    "del": "^4.1.1",
-    "happy-dom": "^0.9.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.8.0",
-    "node-sass": "^4.12.0",
-    "node-sass-magic-importer": "^5.3.2",
-    "pre-build-webpack": "^0.1.0",
-    "sass-loader": "^7.1.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.35.0",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "bootstrap": "^4.3.1",
+    "copyfiles": "^2.2.0",
+    "plumejs": "^2.1.4",
+    "typescript": "^3.7.2"
   }
 }
