--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,27 @@
 {
-  "compilerOptions": {
-      "baseUrl": "./",
-      "rootDir": "./",
-      "target": "es2015",
-      "moduleResolution": "node",
-      "module": "esnext",
-      "lib": [
-          "dom",
-          "es2015",
-          "es2015.promise"
-      ],
-      "importHelpers": true,
-      "noEmitOnError": true,
-      "esModuleInterop": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true, 
-      "sourceMap": true,
-      "skipLibCheck": true,
-      "typeRoots": [
-          "@types",
-          "node_modules/@types"
-      ]
-  },
-  "exclude": ["node_modules"]
+    "compilerOptions": {
+        "rootDir": "./",
+        "target": "es2015",
+        "moduleResolution": "node",
+        "module": "commonjs",
+        "lib": [
+            "dom",
+            "es2015",
+            "es2015.promise"
+        ],
+        "declaration": true,
+        "inlineSourceMap": true,
+        "declarationDir": "dist",
+        "outDir": "dist",
+        "importHelpers": true,
+        "noEmitOnError": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "typeRoots": [
+            "@types",
+            "node_modules/@types"
+        ]
+    },
+    "exclude": ["node_modules", "dist"]
 }
