--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "files": [
     "dist/**/*"
   ],
-  "scripts": {
+  "scripts": {    
+    "patch-update": "npm version patch",
+    "tag": "git push --follow-tags",
+    "tag-release": "npm run patch-update && npm run tag",
     "tsc": "tsc && copyfiles src/**/*.scss dist/"
   },
   "main": "./index.ts",
