--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "skipLibCheck": true,
         "typeRoots": [
             "@types",
             "node_modules/@types"
