--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plumejs-ui",
+  "name": "@plumejs/ui",
   "version": "1.1.1",
   "description": "A collection of UI components built using PlumeJs",
   "files": [
