--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "patch-update": "npm version patch",
     "tag": "git push --follow-tags",
     "tag-release": "npm run patch-update && npm run tag",
-    "tsc": "tsc && copyfiles src/**/*.scss dist/"
+    "tsc": "rimraf dist && tsc && copyfiles src/**/*.scss dist/"
   },
   "main": "./dist/index.js",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "bootstrap": "^4.3.1",
     "copyfiles": "^2.2.0",
     "plumejs": "^2.2.2",
+    "rimraf": "^2.7.1",
     "typescript": "^3.7.2"
   }
 }
