--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,39 @@
 {
     "compilerOptions": {
-        "rootDir": "./",
         "target": "ESNext",
-        "moduleResolution": "node",
         "module": "ESNext",
         "lib": [
             "dom",
             "ESNext"
         ],
+        "moduleResolution": "node",
         "declaration": true,
-        "inlineSourceMap": true,
+        "inlineSourceMap": false,
         "declarationDir": "dist",
         "outDir": "dist",
-        "importHelpers": true,
-        "noEmitOnError": true,
+        "rootDir": "./",
+        "removeComments": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
+        "importHelpers": true,
+        "noEmitOnError": true,
         "typeRoots": [
             "@types",
             "node_modules/@types"
+        ],
+        "plugins": [
+            {
+                "transform": "./ast-transformer.ts",
+                "type": "raw",
+                "after": false
+            }
         ]
     },
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "ast-transformer.ts"
     ]
 }
