--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,29 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "lib": [
-            "dom",
-            "ESNext"
-        ],
-        "moduleResolution": "node",
-        "declaration": true,
-        "inlineSourceMap": false,
-        "declarationDir": "dist",
-        "outDir": "dist",
-        "rootDir": "./",
-        "removeComments": true,
-        "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "skipLibCheck": true,
-        "importHelpers": true,
-        "noEmitOnError": true,
-        "typeRoots": [
-            "@types",
-            "node_modules/@types"
-        ],
-        "plugins": [
-            {
-                "transform": "./ast-transformer.ts",
-                "type": "raw",
-                "after": false
-            }
-        ]
-    },
-    "exclude": [
-        "node_modules",
-        "dist",
-        "ast-transformer.ts"
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "commonjs",
+    "lib": ["dom", "ESNext"],
+    "moduleResolution": "node",
+    "declaration": true,
+    "inlineSourceMap": false,
+    "declarationDir": "dist",
+    "outDir": "dist",
+    "rootDir": "./",
+    "removeComments": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "importHelpers": true,
+    "noEmitOnError": true,
+    "typeRoots": ["@types", "node_modules/@types"],
+    "plugins": [
+      {
+        "transform": "./ast-transformer.ts",
+        "type": "raw",
+        "after": false
+      }
     ]
+  },
+  "exclude": ["node_modules", "dist", "ast-transformer.ts"]
 }
