--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "plumejs-ui"
   ],
   "dependencies": {
-    "@plumejs/core": "3.0.0"
+    "@plumejs/core": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
