--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "plumejs-ui"
   ],
   "dependencies": {
-    "@plumejs/core": "^3.0.0"
+    "@plumejs/core": "^3.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
+    "rxjs": "^7.5.2",
     "ttypescript": "^1.5.12",
     "typescript": "^4.5.2"
   }
