--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,33 @@
 {
-  "extends": "./tsconfig-base.json",
   "compilerOptions": {
-    "module": "esnext",
-    "outDir": "dist/mjs",
-    "target": "esnext"
-  }
+    "allowJs": true,
+    "lib": [
+      "dom",
+      "ESNext"
+    ],
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "node",
+    "declaration": true,
+    "inlineSourceMap": false,
+    "declarationDir": "dist",
+    "outDir": "dist",
+    "rootDir": "./",
+    "removeComments": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "importHelpers": true,
+    "noEmitOnError": true,
+    "typeRoots": [
+      "@types",
+      "node_modules/@types"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "ast-transformer.ts"
+  ]
 }
