--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "plumejs-ui"
   ],
   "dependencies": {
-    "@plumejs/core": "^3.3.0"
+    "@plumejs/core": "^4.0.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.8.0",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.4.1",
     "typescript": "^4.9.4"
   }
 }
